<resources>
    <string name="app_name">My Application</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn0">0</string>
    <string name="btnadd">+</string>
    <string name="btnsub">-</string>
    <string name="btnmul">x</string>
    <string name="btncancel">C</string>
    <string name="btndiv">/</string>
    <string name="btnequal">=</string>
    <string name="tv1">0</string>
</resources>
