<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.user.myapplication.HomeActivity"
    android:background="#9c9d40"
    android:padding="0dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv1"
        android:id="@+id/tv1"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:paddingTop="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="bottom|end"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#090909" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn7"
        android:id="@+id/btn7"
        android:layout_below="@+id/tv1"
        android:layout_alignLeft="@+id/tv1"
        android:layout_alignStart="@+id/tv1"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:onClick="onClickNumber" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn8"
        android:id="@+id/btn8"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_alignTop="@+id/btn7"
        android:layout_toRightOf="@+id/btn7"
        android:layout_toEndOf="@+id/btn7"
        android:onClick="onClickNumber" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btnadd"
        android:id="@+id/btnadd"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_alignTop="@+id/btn9"
        android:layout_toRightOf="@+id/btn9"
        android:layout_toEndOf="@+id/btn9"
        android:onClick="onClickOperator" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn9"
        android:id="@+id/btn9"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_alignTop="@+id/btn8"
        android:layout_toRightOf="@+id/btn8"
        android:layout_toEndOf="@+id/btn8"
        android:onClick="onClickNumber" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn4"
        android:id="@+id/btn4"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_below="@+id/btn7"
        android:layout_toLeftOf="@+id/btn8"
        android:layout_toStartOf="@+id/btn8"
        android:onClick="onClickNumber" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn5"
        android:id="@+id/btn5"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_below="@+id/btn8"
        android:layout_toRightOf="@+id/btn4"
        android:layout_toEndOf="@+id/btn4"
        android:onClick="onClickNumber" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn6"
        android:id="@+id/btn6"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_below="@+id/btnadd"
        android:layout_toLeftOf="@+id/btnadd"
        android:layout_toStartOf="@+id/btnadd"
        android:onClick="onClickNumber" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btnsub"
        android:id="@+id/btnsub"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_below="@+id/btnadd"
        android:layout_alignLeft="@+id/btnadd"
        android:layout_alignStart="@+id/btnadd"
        android:onClick="onClickOperator" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn1"
        android:id="@+id/btn1"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_below="@+id/btn4"
        android:layout_alignLeft="@+id/btn4"
        android:layout_alignStart="@+id/btn4"
        android:onClick="onClickNumber" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn2"
        android:id="@+id/btn2"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_below="@+id/btn5"
        android:layout_toRightOf="@+id/btn1"
        android:layout_toEndOf="@+id/btn1"
        android:onClick="onClickNumber" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn3"
        android:id="@+id/btn3"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_below="@+id/btn6"
        android:layout_toRightOf="@+id/btn2"
        android:layout_toEndOf="@+id/btn2"
        android:onClick="onClickNumber" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btnmul"
        android:id="@+id/btnmul"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_below="@+id/btn6"
        android:layout_toRightOf="@+id/btn3"
        android:layout_toEndOf="@+id/btn3"
        android:onClick="onClickOperator" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btncancel"
        android:id="@+id/btncancel"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_below="@+id/btn1"
        android:layout_alignLeft="@+id/btn1"
        android:layout_alignStart="@+id/btn1"
        android:onClick="onClickClear" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn0"
        android:id="@+id/btn0"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_alignTop="@+id/btncancel"
        android:layout_toRightOf="@+id/btncancel"
        android:layout_toEndOf="@+id/btncancel"
        android:onClick="onClickNumber" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btnequal"
        android:id="@+id/btnequal"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_alignTop="@+id/btn0"
        android:layout_toLeftOf="@+id/btnmul"
        android:layout_toStartOf="@+id/btnmul"
        android:onClick="onClickEqual" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btndiv"
        android:id="@+id/btndiv"
        android:padding="0dp"
        android:textSize="30sp"
        android:background="#837777"
        android:layout_below="@+id/btn3"
        android:layout_toRightOf="@+id/btn3"
        android:layout_toEndOf="@+id/btn3"
        android:onClick="onClickOperator" />

</RelativeLayout>

